--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -217,13 +217,13 @@
         "name": "Humphrey Onuh",
         "role": "Operations Engineer, Tennet (Germany)",
         "content": "I have actively been part of the Mantle Mentorship for over 10 years, and I can confidently say that this mentorship has significantly shaped my career path and mental development. Through its impact, I transitioned from conventional energy into the renewable energy space, and I am now working as an Operating Engineer. Consistent mentorship gave clarity, direction, and definition to both my career and personal growth.",
-        "image": "/humphrey.jpeg"
+        "image": "/Humphrey.jpeg"
       },
       {
         "name": "Cyprian Onyekperem",
         "role": "PhD Student, (Paris, France)",
         "content": "In Life, as one makes progressive steps to impacting mankind positively, it becomes noble & imperative at certain junctures to thank persons especially those outside his/her family circles & Church, but who have wielded good & indispensable influences directly or indirectly geared towards the realization of the progressive steps. Mr Ebuka Umeh is one of such persons in my life that deserves such thanks. Right from my Masters degree days till date, his pearls of advice has been exceptional. I remain appreciative of this highly esteemed gesture and this is one of the stimulants which has endeared me to project same to others too, that crossed my path and are receptive of good counsel. Thanks to Mr Ebuka Umeh.",
-        "image": "/cyprian.jpeg"
+        "image": "/Cyprian.jpeg"
       },
       {
         "name": "Job John",
