--- a/public/locales/nl/common.json
+++ b/public/locales/nl/common.json
@@ -217,13 +217,13 @@
         "name": "Humphrey Onuh",
         "role": "Operations Engineer, Tennet (Duitsland)",
         "content": "Ik neem al meer dan 10 jaar actief deel aan de Mantle Mentorschapsprogramma, en ik kan met vertrouwen zeggen dat dit mentorschap mijn carrièrepad en mentale ontwikkeling aanzienlijk heeft gevormd. Door de impact ben ik overgestapt van conventionele energie naar de hernieuwbare energiesector, en werk ik nu als Operating Engineer. Consistente mentorschap gaf duidelijkheid, richting en definitie aan zowel mijn carrière als persoonlijke groei.",
-        "image": "/humphrey.jpeg"
+        "image": "/Humphrey.jpeg"
       },
       {
         "name": "Cyprian Onyekperem",
         "role": "PhD Student, (Parijs, Frankrijk)",
         "content": "In het leven, terwijl men vooruitgang boekt in het positief beïnvloeden van de mensheid, wordt het nobel & noodzakelijk op bepaalde kruispunten om personen te bedanken, vooral die buiten zijn/haar familiekring & Kerk, maar die goede & onmisbare invloeden hebben uitgeoefend direct of indirect gericht op de realisatie van de vooruitgang. Mr Ebuka Umeh is een van zulke personen in mijn leven die zulke dank verdient. Vanaf mijn masterdagen tot op heden is zijn parels van advies uitzonderlijk geweest. Ik blijf dankbaar voor dit hooggewaardeerde gebaar en dit is een van de stimulansen die mij hebben aangezet om hetzelfde te projecteren naar anderen die mijn pad kruisen en ontvankelijk zijn voor goed advies. Bedankt aan Mr Ebuka Umeh.",
-        "image": "/cyprian.jpeg"
+        "image": "/Cyprian.jpeg"
       },
       {
         "name": "Job John",
